# mlops_assignment_thadenn_alex

./: .gitignore  README.md  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
data/processed/: .gitignore  clean_used_car_prices.csv
data/raw/: .gitignore  02_Used_Car_Prices.xlsx.dvc
data/wheatseeds/: .gitignore  03_Wheat_Seeds.csv  03_Wheat_Seeds.csv.dvc  example_request.json  wheat_seeds_batch_examples.csv
models/: .gitignore  catboost_used_car_model.pkl
notebooks/: Cleaning_Car.ipynb  Modelling_Car.ipynb  Thadenn_Task1_EDA_WheatSeeds.ipynb  Thadenn_Task2_Modelling_WheatSeeds.ipynb
src/: app.py  modelling_car.py  modelling_wheat.py  preprocessing_car.py
src/config/: config.yaml  config_wheat.yaml  pycaret_setup_config.json
src/pages/: car_price_prediction.py  wheat_seeds.py
